--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -16,6 +16,8 @@ require(rlang)
 options(mc.cores = parallel::detectCores())
 future::plan("multiprocess")
 
+load(here::here("ignore", "data_R", "raw.rda"))
+
 snodgrass <- function (num, denom) return((num+.5)/(denom+1))
 snodgrass_vec <- function (vec) return((sum(vec) + 0.5) / (length(vec) + 1))
 sdt_pr <- function (hit, fa) return(hit - fa)
@@ -145,51 +147,6 @@ posterior_preplot_fixef <- function (object, newdata, pred_col = "y_pred", draws
   
   return(out)
 }
-
-demos = read_csv("ignore/demographics/demo_smoke_habits.csv") %>%
-  mutate(cigs_per_day_est = 10 * cigs_per_day_est) %>%
-  mutate_if(is.numeric, as.integer) %>%
-  mutate(cigs_per_day_est = .1 * cigs_per_day_est,
-         ppm_on = if_else(condition == 1, ppm_s1, ppm_s2),
-         ppm_off = if_else(condition == 1, ppm_s2, ppm_s1))
-
-raw = tibble(filename = list.files("ignore/data_raw", pattern = ".txt", full.names = TRUE)) %>%
-  mutate(data = map(filename, ~.x %>%
-                      read_delim(delim = "\t",
-                                 skip = 9,
-                                 col_names = FALSE) %>%
-                      select(trial = X1,
-                             stimOnsetTime = X2,
-                             exptCond = X4,
-                             stimNum = X6,
-                             cue = X7,
-                             probe = X8,
-                             valid = X9,
-                             resp = X10,
-                             corResp = X11,
-                             acc = X12,
-                             rt = X13) %>%
-                      mutate_at(c("trial", "exptCond", "valid", "resp", "corResp", "acc"),
-                                as.integer) %>%
-                    mutate_at(c("cue", "probe"), ~recode(., `1` = "art", `2` = "room")))) %>%
-  mutate(subj_num = as.integer(str_sub(filename, start = 32L, end = 34L)),
-         session_num = str_sub(filename, start = -5L, end = -5L),
-         session_num = if_else(session_num == "2", 2L, 1L)) %>%
-  select(-filename) %>%
-  left_join(demos %>%
-              select(subj_num, condition, ppm_on, ppm_off) %>%
-              pivot_longer(names_to = "on_smoking", values_to = "ppm", cols = starts_with("ppm")) %>% 
-              mutate(on_smoking = recode(on_smoking, ppm_on = 1L, ppm_off = 0L),
-                     # move session_num to 0 and 1, I gotta plan
-                     condition_reverse = if_else(condition == 1L, 2L, 1L),
-                     session_num = if_else(on_smoking == 1, condition, condition_reverse),
-                     ppm_z = c(scale(ppm))),
-            by = c("subj_num", "session_num")) %>%
-  select(-condition_reverse) %>%
-  # Scrub all subjects who don't appear in demographics data
-  filter(!is.na(condition)) %>%
-  # mutate(on_smoking = as.integer(session_num == condition)) %>%
-  unnest(data)
 ```
 
 ## checking data quality
@@ -224,23 +181,6 @@ Pretty sure most of these hinge on manually calculating A'/d' and such.
 - check for improvement between first and second session
 
 ### Manually calculating SDT metrics: Craazy right?
-
-```{r}
-sdt_metrics <- raw %>%
-  filter(valid == 1) %>%
-  mutate(corResp = recode(corResp, `0` = "fa", `1` = "hit"),
-         on_smoking = recode(on_smoking, `0` = "off", `1` = "on"),
-         exptCond = recode(exptCond, `0` = "control", `1` = "relational")) %>%
-  group_by(subj_num, on_smoking, exptCond, cue, corResp) %>%
-  summarize(rate = mean(resp), snod = snodgrass_vec(resp), n_trials = n()) %>%
-  pivot_wider(names_from = corResp, values_from = c(rate, snod)) %>%
-  mutate(aprime = sdt_aprime(rate_hit, rate_fa),
-         aprime_snod = sdt_aprime(snod_hit, snod_fa),
-         dprime = sdt_dprime(snod_hit, snod_fa),
-         pr = sdt_pr(rate_hit, rate_fa))
-
-save(raw, sdt_metrics, file = here::here("ignore", "data_R", "raw.rda"))
-```
 
 ```{r}
 sdt_metrics %>%
